// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Cards/GoalProgressCard/Card No Progress Or Items 1`] = `
<div
  className="h-44 p-4"
>
  <div
    className="flex items-center rounded-lg bg-primary-100 px-4 py-3 shadow"
  >
    <div
      className="mr-6 w-full"
    >
      <p
        className="text-bold-caption-100"
        data-testid="txt"
      >
        Hectors Restored
      </p>
      <p
        className="text-bold-headline-1000"
        data-testid="txt"
      >
        150
      </p>
      <div
        className="h-[9px] w-full bg-neutral-200 bg-primary-200 opacity-0"
        role="progressbar"
      >
        <div
          className="h-full bg-primary transition-all duration-300"
          style={
            Object {
              "width": "0%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Cards/GoalProgressCard/Card Progress And Items 1`] = `
<div
  className="h-44 p-4"
>
  <div
    className="flex items-center rounded-lg bg-primary-100 px-4 py-3 shadow"
  >
    <div
      className="mr-6 w-full"
    >
      <p
        className="text-bold-caption-100"
        data-testid="txt"
      >
        Trees Restored
      </p>
      <p
        className="text-bold-headline-1000"
        data-testid="txt"
      >
        600/732
      </p>
      <div
        className="h-[9px] w-full bg-neutral-200 bg-primary-200"
        role="progressbar"
      >
        <div
          className="h-full bg-primary transition-all duration-300"
          style={
            Object {
              "width": "81.9672131147541%",
            }
          }
        />
      </div>
    </div>
    <div
      className="space-y-3 p-3"
    >
      <div
        className="flex items-center justify-between"
      >
        <div
          style={
            Object {
              "height": undefined,
              "width": 24,
            }
          }
        />
        <p
          className="mr-auto whitespace-nowrap text-bold-caption-200"
          data-testid="txt"
        >
          Organisations Joined
        </p>
        <p
          className="ml-4 text-bold-subtitle-500"
          data-testid="txt"
        >
          23
        </p>
      </div>
      <div
        className="flex items-center justify-between"
      >
        <div
          style={
            Object {
              "height": undefined,
              "width": 24,
            }
          }
        />
        <p
          className="mr-auto whitespace-nowrap text-bold-caption-200"
          data-testid="txt"
        >
          Trees Planed
        </p>
        <p
          className="ml-4 text-bold-subtitle-500"
          data-testid="txt"
        >
          1332
        </p>
      </div>
      <div
        className="flex items-center justify-between"
      >
        <div
          style={
            Object {
              "height": undefined,
              "width": 24,
            }
          }
        />
        <p
          className="mr-auto whitespace-nowrap text-bold-caption-200"
          data-testid="txt"
        >
          Trash Removed 
        </p>
        <p
          className="ml-4 text-bold-subtitle-500"
          data-testid="txt"
        >
          530000
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Cards/GoalProgressCard/Card Progress No Items 1`] = `
<div
  className="h-44 p-4"
>
  <div
    className="flex items-center rounded-lg bg-primary-100 px-4 py-3 shadow"
  >
    <div
      className="mr-6 w-full"
    >
      <p
        className="text-bold-caption-100"
        data-testid="txt"
      >
        Workday (PPC)
      </p>
      <p
        className="text-bold-headline-1000"
        data-testid="txt"
      >
        75/150
      </p>
      <div
        className="h-[9px] w-full bg-neutral-200 bg-primary-200"
        role="progressbar"
      >
        <div
          className="h-full bg-primary transition-all duration-300"
          style={
            Object {
              "width": "50%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
